SideBar tablet view

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -525,6 +525,9 @@
       },
       {
         "label": "Calendar"
+      },
+      {
+        "label": "Chatbot"
       }
     ],
     "explore": "Explore",
