New Carousel Styling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -63,7 +63,7 @@
         "subtitle": "of stock market experience"
       },
       {
-        "title": "Thousands of stocks",
+        "title": "1000s of stocks",
         "subtitle": "researched through fundamental analysis"
       },
       {
