Scroll buttons styling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -372,7 +372,7 @@
     "subtitle": "We’ll soon introduce a guided assistant to streamline scheduling and prep.",
     "iconAltText": "Assistant icon",
     "iconLabel": "Assistant",
-    "buttonText": "Coming soon"
+    "buttonText": "Chatbot"
   },
   "scheduling": {
     "serviceSelection": {
