--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -358,7 +358,7 @@
     "subtitle": "Pronto presentaremos un asistente guiado para agilizar la programación y la preparación.",
     "iconAltText": "Icono del asistente",
     "iconLabel": "Asistente",
-    "buttonText": "Próximamente"
+    "buttonText": "Chatbot"
   },
   "scheduling": {
     "serviceSelection": {
