--- a/public/locales/pt-BR/translation.json
+++ b/public/locales/pt-BR/translation.json
@@ -358,7 +358,7 @@
         "subtitle": "Em breve apresentaremos um assistente guiado para agilizar o agendamento e a preparação.",
         "iconAltText": "Ícone do assistente",
         "iconLabel": "Assistente",
-        "buttonText": "Em breve"
+        "buttonText": "Chatbot"
     },
     "scheduling": {
         "serviceSelection": {
