--- a/public/locales/pt-PT/translation.json
+++ b/public/locales/pt-PT/translation.json
@@ -361,7 +361,7 @@
         "subtitle": "Em breve iremos introduzir um assistente guiado para agilizar marcações e preparação.",
         "iconAltText": "Ícone do assistente",
         "iconLabel": "Assistente",
-        "buttonText": "Brevemente"
+        "buttonText": "Chatbot"
     },
     "scheduling": {
         "serviceSelection": {
